--- a/index.html
+++ b/index.html
@@ -38,4 +38,9 @@
 </head>
 <body>
   <div class="status-box">
-    <h1>
+    <h1>Forge Gateway</h1>
+    <div class="status offline">Status: Offline</div>
+    <div class="timestamp">Last checked: June 27, 2025 14:22 UTC</div>
+  </div>
+</body>
+</html>
